# openbsd-wip

./: .gitignore  ABANDONED  FINISHED  README  README.md
archivers/7zip/: Makefile  TODO  distinfo
archivers/brotli/: Makefile  distinfo
archivers/draco/: Makefile
archivers/ggzip/: Makefile  distinfo
archivers/gzip/: Makefile  distinfo
archivers/jcat/: Makefile  distinfo
archivers/libarchive-c/: Makefile  distinfo
archivers/lzip/: Makefile  Makefile.inc
archivers/p5-Compress-LZF/: Makefile  distinfo
archivers/p5-Compress-LZO/: Makefile  distinfo
archivers/p5-Compress-Raw-Bzip2/: Makefile  distinfo
archivers/p5-Compress-Raw-Lzma/: Makefile  distinfo
archivers/p5-Compress-Raw-Zlib/: Makefile  distinfo
archivers/p5-Compress-Stream-Zstd/: Makefile  distinfo
archivers/p5-IO-Compress-Bzip2/: Makefile  distinfo
archivers/p5-IO-Compress-Lzf/: Makefile  distinfo
archivers/p5-IO-Compress-Lzma/: Makefile  distinfo
archivers/p5-IO-Compress-Lzop/: Makefile  distinfo
audio/: TODO
chromium-extended/: Makefile
fonts/: fonts.mk
games/: TODO
meta/: Makefile.inc
multimedia/: UPDATE
sysutils/packagekit/files/: Makefile.am  Makefile.in  openbsd-backend.pl  openbsd-ports-backend.sh  pk-backend-openbsd-ports.c  pk-backend-openbsd.c
sysutils/packagekit/files/OpenBSD/: Makefile.am
sysutils/packagekit/files/OpenBSD/PackageKit/: Categories.pm  DBIModel.pm  Makefile.am  Pkg.pm  Tools.pm
sysutils/packagekit/files/OpenBSD/PackageKit/Pkg/: Add.pm  Delete.pm  Makefile.am
sysutils/packagekit/files/PackageKit/: Makefile.am  enums.pm  prints.pm
(+24852 files in other folders)
